for react enviroment

--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  </head>
-  <body>
-    <div id="app"></div>
-  </body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="UTF-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><link rel="stylesheet" href="/style.css"/><script src="/bundled.js"></script><script defer="defer" src="/main.b682c8f2a59082363d7e.js"></script></head><body><div id="app"></div></body></html>
